Added pathes to register user and getting current user
